# lipeutils

./: .gitignore  LICENSE  README.md  calc_juros_compostos.py  calc_juros_simples.py  calc_lucro.py  conversor_m_p.py  lipeutils.py  loterias.py  pyproject.toml  simp_fracoes.py  test_primos.py
lipeutils/: Util.py  __init__.py  calc_anti.py  calc_centavos_crescentes.py  calc_dias_vida.py  calc_imc.py  conversor_m_p.py  lipeutils.py  mega_sena.py
