[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lipeutils"
version = "1.0.0"
authors = [
    {name = "Luiz Felipe Neves", email = "luizfneves@proton.me"},
]
description = "CLI random utilities"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["utilities", "random", "math"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]

[project.scripts]
liut = "lipeutils.lipeutils:main"